Bug 1943789 - Remove sleep so UI doesn't freeze r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D237002